@@ -1,0 +1,5 @@
+Alternatively, you can use package manager for your Linux distribution.
+
+== Ubuntu ==
+
+ $ sudo apt-get install android-sdk
