@@ -1,4 +1,5 @@
 * 2016.10.21 - added dependency on ARM WA tool if adding target machine that uses WA ...
+             - added soft:android.sdk description and detection
 
 * 2016.10.18 - added 'no_tags' to prune environments (set function) ...
 
